@@ -66,6 +66,7 @@ version <next>:
 - FLAC parser added
 - gradfun filter added
 - AMR-WB decoder
+- replace the ocv_smooth filter by a more generic ocv filter
 
 
 version 0.6:
